--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A library for inspecting and manipulating virtual hard disk (VHD) files.
+Provides functions to inspect and manipulate Virtual Hard Disk (VHD) files, according to the VHD specification (version 1.0).
