Use more natural capitalization within README and cabal file.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Provides functions to inspect and manipulate Virtual Hard Disk (VHD) files, according to the VHD specification (version 1.0).
+Provides functions to inspect and manipulate virtual hard disk (VHD) files, according to the VHD specification (version 1.0).
